--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,21 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Debug AnimationData Test",
-      "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}/src/main.ts",
-      "outFiles": ["${workspaceFolder}/dist/**/*.js"],
+      "name": "Debug Main TS",
       "runtimeArgs": ["-r", "ts-node/register"],
-      "console": "integratedTerminal"
+      "args": [
+        "${workspaceFolder}/src/main.ts"
+      ],
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ],
+      "sourceMaps": true,
+      "internalConsoleOptions": "openOnSessionStart",
+      "skipFiles": [
+        "<node_internals>/**",
+        "node_modules/**"
+      ]
     }
   ]
 }
